# python-copier

./: LICENSE  README.md  copier.yml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint-generated.yml  lint-self.yml
template/: LICENSE{% if project_license.short == 'ELv2' %}.md{% endif %}.jinja  LICENSE{% if project_license.short == 'Elastic License 2.0 (ELv2)' %}.md{% endif %}.jinja  README.md.jinja  noxfile.py  noxfile.py.jinja  pyproject.toml  pyproject.toml.jinja  {% if project_license.short != 'ELv2' %}LICENSE{% endif %}.jinja  {% if project_license.short == 'ELv2' %}LICENSE.md{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.devcontainer/: devcontainer.json.jinja  devcontainer.json.jinja2
template/.github/: dependabot.yml
template/.github/workflows/: CI.yml.jinja
